@@ -2,7 +2,7 @@
 <plugin_manifest xmlns="http://www.elgg.org/plugin_manifest/1.8">
 	<name>Rename Friends</name>
 	<author>Matt Beckett (matt@clever-name.com)</author>
-	<version>1.0</version>
+	<version>1.2</version>
 	<description>Allows an administrator to dynamically change the word "Friends" to any other arbitrary name</description>
 	<website>http://clever-name.com</website>
 	<copyright>(C) Matt Beckett, 2012</copyright>
@@ -13,7 +13,10 @@
 		<type>elgg_release</type>
 		<version>1.8</version>
 	</requires>
-  
+	<requires>
+		<type>priority</type>
+		<priority>after</priority>
+		<plugin>rename_groups</plugin>
+	</requires>
 	<category>Misc</category>
-	<admin_interface>advanced</admin_interface>
 </plugin_manifest>
