@@ -1,4 +1,8 @@
 Changelog
 
+03/23/12
+Fixed issue where a deactivated rename_groups could still influence group names for strings that
+contain both "friends" and "groups"
+
 03/10/2012
 Initial Release
